syntax = "proto3";

                 package gameWeather;
service GameWeatherService {
 rpc createGameWeather (GameWeatherCreateInput) returns (GameWeather) {}
rpc gameWeathers (findManyParams) returns (stream GameWeather) {}
rpc gameWeather (GameWeatherWhereUniqueInput) returns (GameWeather) {}
rpc updateGameWeather (GameWeatherUpdateInput) returns (GameWeather) {}
rpc deleteGameWeather (GameWeatherWhereUniqueInput) returns (GameWeather) {} 
 }
message GameWeatherCreateInput {
int32 chance = 1;
string createdAt = 2;
string id = 3;
int32 kind = 4;
string script = 5;
int32 season = 6;
string updatedAt = 7;
int32 zone = 8;
};
message GameWeather {
int32 chance = 1;
string createdAt = 2;
string id = 3;
int32 kind = 4;
string script = 5;
int32 season = 6;
string updatedAt = 7;
int32 zone = 8;
};
message GameWeatherWhereUniqueInput {
int32 chance = 1;
string createdAt = 2;
string id = 3;
int32 kind = 4;
string script = 5;
int32 season = 6;
string updatedAt = 7;
int32 zone = 8;
};
message GameWeatherUpdateInput {
int32 chance = 1;
string createdAt = 2;
string id = 3;
int32 kind = 4;
string script = 5;
int32 season = 6;
string updatedAt = 7;
int32 zone = 8;
};
message findManyParams {

};